--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet"  href="styles.css">
 </head>
 <body>
-    <div class="header">
-        Header tekst
-        <ul>
-            <li>link en</li>
-            <li>link to</li>
-            <li>link tre</li>
-        </ul>
-    </div>
-    <div class="signup-top">
-        <h1>This website is awesome</h1>
-        <button>Sign up</button>
+    <div class="container-top">
+        <div class="header">
+            <div class="headerlogo">Header Logo
+            </div> 
+            <ul class="headerlinks">
+                <li>link en</li>
+                <li>link to</li>
+                <li>link tre</li>
+            </ul>
+        </div>
+        <div class="signup-top">
+            <h1>This website is awesome</h1>
+            <button>Sign up</button>
+        </div>
     </div>
     <div class="info">
         <h2>Some random info</h2>
